<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:gravity="center">


            <fragment
                android:id="@+id/button_fragment1"
                android:name="com.example.android.myapplogin.Footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/footer"/>


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/footer"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <EditText
                    android:id="@+id/add_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    />
                <EditText
                    android:id="@+id/add_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/text"
                    />
                <Button
                    android:id="@+id/add_category_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category"/>

                <Button
                    android:id="@+id/add_save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"/>


            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>